# vk_base

./: CMakeLists.txt
config/: Common.se
include/trc/: AssetDescriptor.h  RasterSceneBase.h  RasterTasks.h  VulkanInclude.h
include/trc/assets/: AnimationRegistry.h  AssetBase.h  AssetManagerBase.h  AssetReference.h  AssetRegistry.h  AssetRegistryModule.h  AssetRegistryModuleStorage.h  AssetSource.h  AssetStorage.h  DeviceDataCache.h  Hashes.h  MaterialRegistry.h  RigRegistry.h  Serializer.h  TextureRegistry.h
include/trc/assets/import/: AssetImport.h
include/trc/base/: Device.h  VulkanDebug.h
include/trc/core/: Instance.h  Pipeline.h  RenderPass.h
include/trc/drawable/: DefaultDrawable.h  DrawableScene.h
include/trc/material/: FragmentShader.h  MaterialProgram.h  MaterialRuntime.h  MaterialShaderProgram.h  MaterialSpecialization.h  ShaderFunctions.h  ShaderResourceInterface.h  TorchMaterialSettings.h  VertexShader.h
include/trc/material/shader/: BasicType.h  Capability.h  CapabilityConfig.h  CodePrimitives.h  CommonShaderFunctions.h  Constant.h  DefaultResourceResolver.h  ShaderCodeBuilder.h  ShaderCodeCompiler.h  ShaderFunction.h  ShaderModuleBuilder.h  ShaderModuleCompiler.h  ShaderOutputInterface.h  ShaderProgram.h  ShaderResourceInterface.h  ShaderRuntime.h  ShaderRuntimeConstant.h  ShaderTypeChecker.h
include/trc/ray_tracing/: AccelerationStructure.h  RayPipelineBuilder.h  ShaderBindingTable.h
protobuf/: material.proto  material_shader_program.proto
shaders/: asset_registry_descriptor_template.glsl
src/: AssetDescriptor.cpp  Meshlet.cpp  RasterSceneBase.cpp  RasterTasks.cpp  ShaderLoader.cpp
src/assets/: AssetPath.cpp  AssetStorage.cpp  MaterialRegistry.cpp  SimpleMaterial.cpp
src/assets/import/: AssetImport.cpp
src/base/: Device.cpp  ShaderProgram.cpp
src/core/: Instance.cpp  Pipeline.cpp  RenderPass.cpp
src/drawable/: DefaultDrawable.cpp  DrawableScene.cpp  RasterComponent.cpp
src/material/: CMakeLists.txt  FragmentShader.cpp  MaterialProgram.cpp  MaterialRuntime.cpp  MaterialShaderProgram.cpp  MaterialSpecialization.cpp  ShaderResourceInterface.cpp  TorchMaterialSettings.cpp  VertexShader.cpp
src/material/shader/: BasicType.cpp  CMakeLists.txt  CapabilityConfig.cpp  CommonShaderFunctions.cpp  Constant.cpp  ShaderCodeBuilder.cpp  ShaderCodeCompiler.cpp  ShaderModuleBuilder.cpp  ShaderModuleCompiler.cpp  ShaderOutputInterface.cpp  ShaderProgram.cpp  ShaderResourceInterface.cpp  ShaderRuntime.cpp  ShaderTypeChecker.cpp
src/ray_tracing/: AccelerationStructure.cpp  RayTracingPlugin.cpp  ShaderBindingTable.cpp
test/: main.cpp  materials.cpp
test/unittest/: test_basic_type.cpp  test_raster_scene_base.cpp  test_shader_code_typechecker.cpp
tools/asset_convert/: asset_convert.cpp
tools/pipeline_definition_language/auxiliary/: FlagCombination.h
tools/pipeline_definition_language/src/: PipelineDefinitionLanguage.cpp
tools/pipeline_definition_language/test/: FlagCombinationTest.cpp
tools/spirv_compiler/include/spirv/: FileIncluder.h
tools/spirv_compiler/src/: FileIncluder.cpp
tools/torch_util/include/trc_util/: Exception.h
